src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType User */
export class UserModel {
  __typename = "UserModel";
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts:3:16 - error: Expected `__typename` property initializer to be `"User"`, found `"UserModel"`.

3   __typename = "UserModel";
                 ~~~~~~~~~~~
